--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="child-wear">
             <p class="child">
-                <img src="Image/child-tshirt.webp" alt="" id="i1" width="300px">
+                <img src="child-tshirt.webp" alt="" id="i1" width="300px">
                 <p class="common">All Size Children Wear Are Available.</p>
                 <p class="common1">Find something new for childs, new fashions and style. Find your size clothes.</p>
                 <button class="btn1">Buy it Now</button>
@@ -37,7 +37,7 @@
         </div>
         <div class="couple-wear">
             <p class="couple">
-                <img src="Image/couple-tshirt.jpeg" alt="" id="i2" width="300px">
+                <img src="couple-tshirt.jpeg" alt="" id="i2" width="300px">
                 <p class="common2">Find Your Couple Matches & Something New.</p>
                 <p class="common3">Find something new for your partner & make your day special.</p>
                 <button class="btn2">Buy it Now</button>
@@ -45,7 +45,7 @@
         </div>
         <div class="family-wear">
             <p class="family">
-                <img src="Image/family-tshirt.jpg" alt="" id="i1" width="300px">
+                <img src="family-tshirt.jpg" alt="" id="i1" width="300px">
                 <p class="common">Fashion Is One Big Family. Get Awesome Clothes For Your Family.</p>
                 <p class="common1">Find awesome clothes for your family & make them happy.</p>
                 <button class="btn1">Buy it Now</button>
@@ -54,7 +54,7 @@
     </main>
     <div>
         <footer>
-            <img src="Image/footer-background.jpg" alt="" id="i3">
+            <img src="footer-background.jpg" alt="" id="i3">
         </footer>
     </div>
 </body>
